[package]
name = "ssb-boxstream"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Encrypted box-stream protocol for Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-boxstream"
documentation = "https://docs.rs/ssb-boxstream/"
readme = "README.md"
keywords = ["box-stream", "ssb", "scuttlebutt"]

[dependencies]
byteorder = "1.3.1"
futures-preview = "0.3.0-alpha.16"
quick-error = "1.2.2"
ssb-crypto = "~0.1.3"

[dev-dependencies]
async-ringbuffer = "0.5.1"
