[package]
name = "ssb-boxstream"
version = "0.2.1"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Encrypted box-stream protocol for Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-boxstream"
documentation = "https://docs.rs/ssb-boxstream/"
readme = "README.md"
keywords = ["box-stream", "ssb", "scuttlebutt"]
include = ["src/**/*", "README.md"]

[dependencies]
byteorder = "1.3.1"
futures-io = "0.3.5"
futures-core = "0.3.5"
ssb-crypto = { version = "0.2.0", path = "../ssb-crypto" }
zerocopy = { version = "0.3.0" }
thiserror = "1.0.20"

[dev-dependencies]
async-ringbuffer = "~0.5.4"
futures-executor = "0.3.5"
futures-task = "0.3.5"
futures-util = { version = "0.3.5", features = ["io"] }
